@@ -1,3 +1,9 @@
+2009-11-16  Kevin Ryde  <user42@zip.com.au>
+
+	* textmodes/flyspell.el (sgml-mode-flyspell-verify): Use
+	`sgml-lexical-context' instead of own parse for tag.  (Further to
+	Bug#4511).
+
 2009-11-16  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* vc.el	(vc-log-show-limit): Default to 2000.
